<resources>
    <string name="app_name">LightNote</string>
    <string name="action_settings">Settings</string>
    <string name="category_note_item_property">CategoryNoteItemProperty</string>
    <string name="title_activity_main2">All Notes</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_text_editor">Text Editor for Note</string>
    <string name="title_activity_open_source_lisences">OpenSourceLisences</string>
    <string name="start_value">Start Category</string>
    <string name="hcgdeveloped">Hüseyin Can Gündüz developed</string>
    <string name="font_size">Font Size</string>
    <string name="saving_note_db_message">Please wait... Saving note database</string>
    <string name="created_new">Created New</string>
    <string name="readed_note_db">Readed Note Database</string>
    <string name="changes_saved">Changes saved</string>
    <string name="enter_new_category">Enter new category name</string>
    <string name="enter_new_note">Enter new note name</string>
    <string name="okay">OK</string>
    <string name="cancel">Cancel</string>
    <string name="cant_be_used_named">This name can\'t be used.</string>
    <string name="enter_different_cat_name">Please enter different category name</string>
    <string name="enter_different_note_name">Please enter different note name</string>
    <string name="same_named_files_message_str">Already there is note (or category) at same name.</string>
    <string name="error_occured">We are sorry.Unfortunately, an error occured</string>
    <string name="try_again">Try Again</string>
    <string name="new_cat_added_str">New Category is added</string>
    <string name="newnoteadded_msg">New Note is added</string>
    <string name="add_note">Add Note</string>
    <string name="go_to_upper_category">Go to upper category</string>
    <string name="browse_files">Browse files</string>
    <string name="by_uri">By URI</string>
    <string name="about">About</string>
    <string name="add_category">Add Category</string>
    <string name="permission_failed">There is no permission, cancelled by user or Excepted an error...</string>
    <string name="adding_img">Adding Image</string>
    <string name="plswait_wh_adding_image">Please wait while adding image file</string>
    <string name="successful">Successful</string>
    <string name="fileselect_invalid_extns">Please select file that ends with \'.png\', \'.jpg\', \'jpeg\' or \'gif\'</string>
    <string name="enter_url">Please write the image link</string>
    <string name="isnt_invalid_image">It is  invalid image file</string>
    <string name="yep">Yep</string>
    <string name="no">No</string>
    <string name="perm_request_for_image_select">We need storage permissions for select image, take photo and etc.</string>
    <string name="continue_txt">Continue</string>
    <string name="do_u_save_note">Do you want save the Note?</string>
    <string name="save_note_question_title">Save note?</string>
    <string name="pls_wait_loading_note">Please wait while loading note</string>
    <string name="loading_note">Loading Note</string>
    <string name="dir_is_empty">Directory is empty</string>
    <string name="does_not_exst_cannot_read">path does not exist or cannot be read</string>
    <string name="unable_write_on_sd_card">unable to write  on the sd card</string>
    <string name="file_colon">File:</string>
    <string name="readable">readable</string>
    <string name="up">Up</string>
    <string name="select">Select</string>
    <string name="curent_dir">Current directory</string>
    <string name="lntforandroid">Esenler Motionstar LightNote (for Android)</string>
    <string name="copyright">©2018 Esenler Motionstar, All Rights Reserved</string>
    <string name="used_constituent_parts">Used Open-Source libraries</string>
    <string name="got_it">GOT IT</string>
    <string name="horizontal_scroll_help_text">For reach more functions, you can swipe bottom buttons to left.</string>
    <string name="changed">Changed</string>
    <string name="not_saved">Not saved</string>
    <string name="draft">Draft</string>
    <string name="didnt_apply_changes">Changes is not applied. To delete changes, close note without saving.</string>
    <string name="image_viewer">Image Viewer</string>
    <string name="redo">Redo</string>
    <string name="undo">Undo</string>
    <string name="go_back_to_editor">Go back to editor</string>
    <string name="take_photo">Take photo</string>
    <string name="select_color">Choose color</string>
    <string name="not_found_application">Not found any application for this function. But you can add Image by browsing files, or use URL that belong to Image.</string>
    <string name="galeri">From Gallery</string>
    <string name="select_size_from_list">Select size from list</string>
    <string name="text_background_color">Text Background color</string>
    <string name="foreground_color">Text (or Foreground) color</string>
    <string name="pls_wait_loading">Please wait...</string>
    <string name="x_is_removed">is removed</string>
    <string name="optimizing">Optimizing. Please wait...</string>
    <string name="savenote">Save Note</string>
    <string name="multiple_selection">Multiple selection</string>
    <string name="items_removed_piece">%d item(s) are removed</string>
</resources>
