<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.esenlermotionstar.lightnote.MainActivity">

    <item
        android:id="@+id/menu_image_url"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_link"
        android:title="@string/by_uri"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_add_from_file"
        android:icon="@drawable/ic_action_file"
        android:orderInCategory="100"
        android:title="@string/browse_files"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_add_take_photo"
        android:icon="@drawable/ic_take_photo"
        android:orderInCategory="100"
        android:title="@string/take_photo"

        app:showAsAction="withText" />
    <item
        android:id="@+id/menu_select_from_gallery"
        android:orderInCategory="100"
        android:title="@string/galeri"

        app:showAsAction="withText" />
</menu>
