<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.esenlermotionstar.lightnote.textEditorActivity">
    <item
        android:id="@+id/action_undo"
        android:title="@string/undo"
        android:icon="@drawable/undo_text_editor_icon"
        android:iconTint="@android:color/white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_redo"
        android:title="@string/redo"
        android:icon="@drawable/redo_text_editor_icon"
        android:iconTint="@android:color/white"
        app:showAsAction="ifRoom"></item>
    <item
            android:id="@+id/action_save"
            android:title="@string/savenote"
            android:icon="@drawable/ic_save_24dp"
            android:iconTint="@android:color/white"
            app:showAsAction="ifRoom"></item>
</menu>
