<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.esenlermotionstar.lightnote.MainActivity">



    <item  android:id="@+id/multiple_selection"
           android:orderInCategory="100"
           android:icon="@drawable/ic_check_box_outline_blank_black_24dp"
           android:iconTint="@android:color/white"
           android:title="@string/multiple_selection"
           app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never" />



    <item
        android:id="@+id/goToUpCategory"
        android:title="@string/go_to_upper_category"
        android:icon="@drawable/ic_action_up"
        android:iconTint="@android:color/white"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        ></item>
</menu>
