<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.esenlermotionstar.lightnote.about"
    tools:layout_editor_absoluteY="81dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/lntlogo"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:visibility="visible"
                    app:srcCompat="@drawable/lntbrand" />

                <ImageView
                    android:id="@+id/esenlerlogo"
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/esenler" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lntforandroid"
                app:layout_constraintLeft_toLeftOf="parent"
                tools:layout_editor_absoluteY="64dp" />

            <TextView
                android:id="@+id/txtCopyright"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/copyright" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="esmsEnLink"
                android:text="Esenler Motionstar English" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="esmsTrLink"
                android:text="Esenler Motionstar Türkçe" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="constituentparts"
                android:text="@string/used_constituent_parts" />

            <TextView
                android:id="@+id/txtDeveloper"
                android:layout_width="match_parent"
                android:layout_height="17dp"
                android:text="@string/hcgdeveloped"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_editor_absoluteY="101dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="Instagram, Gitlab: @hussainlobo"
                app:layout_constraintLeft_toLeftOf="parent"
                tools:layout_editor_absoluteY="117dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Github: @huseyincangunduz"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_editor_absoluteY="139dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Blog: hussainlobo.blogspot.com" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
